# tabletime-scheduler

./: .gitignore  CMakeLists.txt  README.md  TO-DO.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  tabletime-scheduler_es.ts
icon/: svg2folder.bash  tabletime-scheduler.icns
models/: classificationcolormanager.cpp  classificationcolormanager.h  importoptions.h  themecolors.cpp  themecolors.h
models/colorGenerators/: colorgenerator.h  rainbowlcolorsgenerator.cpp  rainbowlcolorsgenerator.h
parser/: configurationparser.cpp  configurationparser.h
process/: importprocess.cpp  importprocess.h
timetable/models/: activity.h  activitypoolmanager.cpp  activitypoolmanager.h  owner.h  resizemode.h  scheduledactivity.h  schedulegridsizemanager.cpp  schedulegridsizemanager.h  schedulepoolmanager.cpp  schedulepoolmanager.h  timeinterval.h
timetable/parser/: timetablefile.h
timetable/ui/: qactivity.cpp  qactivity.h  qscheduleactivity.cpp  qscheduleactivity.h
ui/: activititesmanager.cpp  activititesmanager.h  activititesmanager.ui  configurationdlg.cpp  configurationdlg.h  configurationdlg.ui  fontawesomeiconbuilder.cpp  fontawesomeiconbuilder.h  importdlg.cpp  importdlg.h  importdlg.ui  newuserform.cpp  newuserform.h  newuserform.ui  ownericonbuilder.cpp  ownericonbuilder.h  ownerselectionbutton.cpp  ownerselectionbutton.h  qawesometoolbutton.h  svgiconbuilder.cpp  svgiconbuilder.h  tabletimescene.cpp  tabletimescene.h  usereditselectionaction.cpp  usereditselectionaction.h  viewselectionbutton.cpp  viewselectionbutton.h  weektabletime.cpp  weektabletime.h
ui/menu/: labeltime.cpp  labeltime.h  scheduledactivitymenu.cpp  scheduledactivitymenu.h
